--- a/restaurant_desktop-app/restaurant_desktop-app_master/restaurant_desktop-app/restaurant_desktop-app.csproj
+++ b/restaurant_desktop-app/restaurant_desktop-app_master/restaurant_desktop-app/restaurant_desktop-app.csproj
@@ -5,6 +5,13 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <RootNamespace>restaurant_desktop_app</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
+    <Version>1.0.1</Version>
+    <Authors>Khip01</Authors>
+    <Description>This app is created for demonstrating CRUD Winform App from Database trough API</Description>
+    <ApplicationIcon />
+    <Win32Resource />
   </PropertyGroup>
 
   <ItemGroup>
