--- a/restaurant_mobile_app/pubspec.yaml
+++ b/restaurant_mobile_app/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0
+  shimmer: ^3.0.0
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +25,7 @@ flutter:
     - assets/Create24.png
     - assets/Edit24.png
     - assets/remove24.png
+    - assets/NotFound.svg
   fonts:
     - family: Quicksand
       fonts: 
