feat(Create Menu): New Menu Cover Section

--- a/restaurant_mobile_app/pubspec.yaml
+++ b/restaurant_mobile_app/pubspec.yaml
@@ -26,6 +26,7 @@ flutter:
     - assets/Edit24.png
     - assets/remove24.png
     - assets/NotFound.svg
+    - assets/CMenuImg1.jpg
   fonts:
     - family: Quicksand
       fonts: 
