feat: add .env for initial variable

--- a/restaurant_mobile_app/pubspec.yaml
+++ b/restaurant_mobile_app/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^2.0.7
   shared_preferences: ^2.2.2
   carousel_slider: ^4.2.1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +36,7 @@ flutter:
     - assets/Food4.jpg
     - assets/DragLeft.jpg
     - assets/UndoLeft.jpg
+    - .env
   fonts:
     - family: Quicksand
       fonts: 
