feat: update sneakpeek image

--- a/restaurant_mobile_app/.env
+++ b/restaurant_mobile_app/.env
@@ -1,2 +1,2 @@
 # DEFAULT API ADDRESS
-API_ADDRESS="ADD YOUR CUSTOM API ENDPOINT HERE" // ex: http://192.168.1.5:8081/api/
+API_ADDRESS="http://192.168.1.4:8081/api/"
