--- a/restaurant_desktop-app/restaurant_desktop-app_master/restaurant_desktop-app/Properties/Settings.settings
+++ b/restaurant_desktop-app/restaurant_desktop-app_master/restaurant_desktop-app/Properties/Settings.settings
@@ -1,6 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="restaurant_desktop_app.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="api_endpoint" Type="System.String" Scope="User">
+      <Value Profile="(Default)">http://localhost:8081/api/</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
